# filesanitizer

./: Cargo.toml  README.md  echo  rustfmt.toml
docs/: 20241203_Refactor.md
review/: commands_refactored.rs  common_refactored.rs  main.txt  main_refactored.rs
src/: cli.rs  commands.rs  common.rs  file_operations.rs  main.rs  utils.rs
src/commands/: command.rs  mod.rs  rename_command.rs  test_command.rs
src/commands/commons/: mod.rs
src/commands/subcommands/: mod.rs
